# jupyter-file-server

./: README.md  jupyter_simple_ext1_config.py  pyproject.toml
serve/: application.py  handlers.py
