[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polus-render-ext"
description = "Required component within JupyterLabs to embed Polus Render"
readme = "README.md"
license = ""
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "jupyter_server",
]
version = "0.0.1"

[project.scripts]
jupyter-simple-ext1 = "serve.application:main"

[tool.hatch.build.targets.wheel.shared-data]
"etc/jupyter/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"

